[gd_scene load_steps=25 format=3 uid="uid://dn0hmrfmam4bl"]

[ext_resource type="PackedScene" uid="uid://dup6nowsahsrg" path="res://addons/gui_manager/nodes/singletons/gui_manager/gui_manager.tscn" id="1_fgil1"]
[ext_resource type="Script" path="res://nodes/singletons/managers/gui_manager/gui_manager.gd" id="2_43jm5"]
[ext_resource type="Theme" uid="uid://cd55r8awc3jgy" path="res://themes/main_theme.tres" id="2_v1v03"]
[ext_resource type="PackedScene" uid="uid://n1ca0tqy8k26" path="res://nodes/singletons/managers/dialogue_gui_manager/dialogue_gui_manager.tscn" id="3_ew5n2"]
[ext_resource type="PackedScene" uid="uid://cter0vorqb1lu" path="res://addons/gui_manager/nodes/gui/centered_acting_container/centered_acting_container.tscn" id="4_ddkn8"]
[ext_resource type="PackedScene" uid="uid://b2oeadjalbr07" path="res://addons/gui_manager/nodes/gui/exclusive_gui/exclusive_gui.tscn" id="5_bp7t5"]
[ext_resource type="Script" path="res://addons/node_components/nodes/components/print_color.gd" id="6_g7dor"]
[ext_resource type="PackedScene" uid="uid://c8rw1leee5u7c" path="res://nodes/gui/video_cutscene_player/video_cutscene_player.tscn" id="7_1qpxk"]
[ext_resource type="PackedScene" uid="uid://ct4dxtwfgplwg" path="res://nodes/gui/get_mouse_position_area/get_mouse_position_area.tscn" id="7_56sdt"]
[ext_resource type="PackedScene" uid="uid://cl0gfqdtf6wv3" path="res://nodes/screens/quiz_attempt_screen/quiz_attempt_screen.tscn" id="8_rgdf8"]
[ext_resource type="PackedScene" uid="uid://y2iscrkvsonm" path="res://nodes/gui/player_hud/player_hud.tscn" id="9_32jpw"]
[ext_resource type="PackedScene" uid="uid://b7d7mcq2pxeu1" path="res://nodes/components/if_autoload_state_event_set_property/if_autoload_state_event_set_property.tscn" id="9_ep4ey"]
[ext_resource type="PackedScene" uid="uid://du6p4swgv5hfd" path="res://nodes/gui/navbar_gui/navbar_gui.tscn" id="9_hygrt"]
[ext_resource type="PackedScene" uid="uid://cc8x55fjnng7u" path="res://nodes/singletons/managers/transitions_manager/transitions_manager.tscn" id="10_u8sf5"]
[ext_resource type="PackedScene" uid="uid://ctmxelmponiux" path="res://nodes/screens/customize_character_screen/customize_character_screen.tscn" id="11_xm22g"]
[ext_resource type="PackedScene" uid="uid://dywlc2qvwfqms" path="res://nodes/gui/settings_menu/settings_menu.tscn" id="13_qklwl"]
[ext_resource type="PackedScene" uid="uid://cyepcbc24l4l8" path="res://nodes/screens/achievement_unlocked_screen/achievement_unlocked_screen.tscn" id="14_df8bm"]
[ext_resource type="PackedScene" uid="uid://bvqcvxujyci1a" path="res://nodes/gui/quests_menu/quests_menu.tscn" id="15_54dqn"]
[ext_resource type="PackedScene" uid="uid://hvnsbucyycft" path="res://nodes/gui/alert_screen/alert_screen.tscn" id="18_0q276"]
[ext_resource type="PackedScene" uid="uid://b26qgdv0t84hx" path="res://nodes/gui/saving_label/saving_label.tscn" id="18_62bra"]
[ext_resource type="PackedScene" uid="uid://ckoeormi67l3p" path="res://nodes/gui/item_obtained_screen/item_obtained_screen.tscn" id="18_tnw5h"]
[ext_resource type="LabelSettings" uid="uid://bfng1toxthprb" path="res://resources/label_settings/quiz_attempt_gui_title.tres" id="19_2m0kl"]
[ext_resource type="PackedScene" uid="uid://mqbboxghdjnc" path="res://nodes/gui/item_dialog_screen/item_dialog_screen.tscn" id="19_n8jiq"]

[sub_resource type="Resource" id="Resource_w1cp2"]
script = ExtResource("6_g7dor")
disabled = false
color = Color(0, 0.807843, 0, 1)
owner_name_color = Color(0, 0, 1, 1)
value_color = Color(1, 0, 0, 1)
automatic_value_color = true
use_spaces_for_node_name = false

[node name="GUIManager" node_paths=PackedStringArray("transitions_manager", "dialogue_gui_manager", "customize_character_screen", "settings_menu", "quiz_attempt_screen", "achievement_unlocked_screen", "player_hud", "item_obtained_screen", "dropdown_popup") instance=ExtResource("1_fgil1")]
follow_viewport_enabled = false
script = ExtResource("2_43jm5")
transitions_manager = NodePath("Root/TransitionsManager")
dialogue_gui_manager = NodePath("Root/MarginContainer/BaseControl/Playing/DialogueGUIManager")
customize_character_screen = NodePath("Root/MarginContainer/BaseControl/Playing/CustomizeCharacterScreen")
settings_menu = NodePath("Root/MarginContainer/BaseControl/SettingsMenu")
quiz_attempt_screen = NodePath("Root/MarginContainer/BaseControl/Playing/QuizAttemptScreen")
achievement_unlocked_screen = NodePath("Root/MarginContainer/BaseControl/AchievementUnlockedScreen")
player_hud = NodePath("Root/MarginContainer/BaseControl/Playing/PlayerHUD")
item_obtained_screen = NodePath("Root/MarginContainer/BaseControl/ItemObtainedScreen")
centered_acting_container = ExtResource("4_ddkn8")
exclusive_gui = ExtResource("5_bp7t5")
dropdown_popup = NodePath("DropdownPopup")
_print_color = SubResource("Resource_w1cp2")

[node name="Root" parent="." index="0"]
theme = ExtResource("2_v1v03")

[node name="GetMousePositionArea" parent="Root" index="0" instance=ExtResource("7_56sdt")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 13

[node name="IfPlayingEnteredSetProperty" parent="Root/GetMousePositionArea" index="0" node_paths=PackedStringArray("node") instance=ExtResource("9_ep4ey")]
property = "playing_state"
node = NodePath("..")

[node name="IfPlayingExitedSetProperty" parent="Root/GetMousePositionArea" index="1" node_paths=PackedStringArray("node") instance=ExtResource("9_ep4ey")]
property = "playing_state"
state_event = 1
node = NodePath("..")
new_value = "false"

[node name="Playing" parent="Root/MarginContainer/BaseControl" index="0"]
only_one_instance = false

[node name="CustomizeCharacterScreen" parent="Root/MarginContainer/BaseControl/Playing" index="0" instance=ExtResource("11_xm22g")]
layout_mode = 1
only_one_instance = false

[node name="IfMainScreenEnteredSetProperty" parent="Root/MarginContainer/BaseControl/Playing/CustomizeCharacterScreen" index="2" node_paths=PackedStringArray("node") instance=ExtResource("9_ep4ey")]
property = "main_screen_state"
node = NodePath("..")
new_value = "false"

[node name="PlayerHUD" parent="Root/MarginContainer/BaseControl/Playing" index="1" instance=ExtResource("9_32jpw")]
layout_mode = 1

[node name="Components" type="Node" parent="Root/MarginContainer/BaseControl/Playing" index="2"]

[node name="IfMainScreenEnteredSetProperty" parent="Root/MarginContainer/BaseControl/Playing/Components" index="0" node_paths=PackedStringArray("node") instance=ExtResource("9_ep4ey")]
property = "main_screen_state"
node = NodePath("../..")
new_value = "false"

[node name="IfPlayingEnteredSetProperty" parent="Root/MarginContainer/BaseControl/Playing/Components" index="1" node_paths=PackedStringArray("node") instance=ExtResource("9_ep4ey")]
property = "playing_state"
node = NodePath("../..")
debug = true

[node name="QuizAttemptScreen" parent="Root/MarginContainer/BaseControl/Playing" index="4" instance=ExtResource("8_rgdf8")]
visible = false
layout_mode = 1

[node name="IfMainScreenEnteredSetProperty" parent="Root/MarginContainer/BaseControl/Playing/QuizAttemptScreen" index="4" node_paths=PackedStringArray("node") instance=ExtResource("9_ep4ey")]
property = "main_screen_state"
node = NodePath("..")
new_value = "false"

[node name="DialogueGUIManager" parent="Root/MarginContainer/BaseControl/Playing" index="5" instance=ExtResource("3_ew5n2")]
layout_mode = 1

[node name="InstancedGUIs" parent="Root/MarginContainer/BaseControl" index="1"]
only_one_instance = false

[node name="Root" parent="Root/MarginContainer/BaseControl/InstancedGUIs/CanvasLayer" index="0"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsMenu" parent="Root/MarginContainer/BaseControl" index="2" instance=ExtResource("13_qklwl")]
layout_mode = 1
only_one_instance = false

[node name="IfMainScreenEnteredSetProperty" parent="Root/MarginContainer/BaseControl/SettingsMenu" index="3" node_paths=PackedStringArray("node") instance=ExtResource("9_ep4ey")]
property = "main_screen_state"
node = NodePath("..")
new_value = "false"

[node name="MarginContainer" type="MarginContainer" parent="Root/MarginContainer/BaseControl" index="3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_v1v03")
theme_type_variation = &"PlayerHUDMargin"

[node name="Control" type="Control" parent="Root/MarginContainer/BaseControl/MarginContainer" index="0"]
layout_mode = 2
mouse_filter = 2

[node name="NavbarGUI" parent="Root/MarginContainer/BaseControl/MarginContainer/Control" index="0" instance=ExtResource("9_hygrt")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_top = -40.0
offset_bottom = -40.0
grow_horizontal = 0

[node name="CanvasLayer" type="CanvasLayer" parent="Root/MarginContainer/BaseControl/MarginContainer/Control" index="1"]
layer = 4

[node name="MarginContainer" type="MarginContainer" parent="Root/MarginContainer/BaseControl/MarginContainer/Control/CanvasLayer" index="0"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_v1v03")
theme_type_variation = &"PlayerHUDMargin"

[node name="Root" type="Control" parent="Root/MarginContainer/BaseControl/MarginContainer/Control/CanvasLayer/MarginContainer" index="0"]
layout_mode = 2
mouse_filter = 2

[node name="QuestsMenu" parent="Root/MarginContainer/BaseControl/MarginContainer/Control/CanvasLayer/MarginContainer/Root" index="0" instance=ExtResource("15_54dqn")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -11.0
offset_top = 204.0
offset_right = -11.0
offset_bottom = 204.0
grow_horizontal = 0

[node name="IfMainScreenEnteredSetProperty" parent="Root/MarginContainer/BaseControl/MarginContainer/Control/CanvasLayer/MarginContainer/Root/QuestsMenu" index="2" node_paths=PackedStringArray("node") instance=ExtResource("9_ep4ey")]
property = "main_screen_state"
node = NodePath("..")
new_value = "false"

[node name="SavingLabel" parent="Root/MarginContainer/BaseControl/MarginContainer/Control/CanvasLayer/MarginContainer/Root" index="1" instance=ExtResource("18_62bra")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -162.0
offset_top = -64.0
offset_right = -162.0
offset_bottom = -64.0
grow_horizontal = 0
grow_vertical = 0

[node name="AchievementUnlockedScreen" parent="Root/MarginContainer/BaseControl" index="4" instance=ExtResource("14_df8bm")]
layout_mode = 1
metadata/_edit_lock_ = true

[node name="ItemObtainedScreen" parent="Root/MarginContainer/BaseControl" index="5" instance=ExtResource("18_tnw5h")]
layout_mode = 1

[node name="ItemDialogScreen" parent="Root/MarginContainer/BaseControl" index="6" instance=ExtResource("19_n8jiq")]
layout_mode = 1

[node name="AlertScreen" parent="Root" index="2" instance=ExtResource("18_0q276")]
visible = false
layout_mode = 1

[node name="VideoCutscenePlayer" parent="Root" index="3" instance=ExtResource("7_1qpxk")]
layout_mode = 1

[node name="TransitionsManager" parent="Root" index="4" instance=ExtResource("10_u8sf5")]
layout_mode = 1
only_one_instance = false
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="Demo" type="Label" parent="Root" index="5"]
visible = false
layout_mode = 1
offset_left = 78.0
offset_top = 93.0
offset_right = 391.0
offset_bottom = 160.0
text = "DEMO"
label_settings = ExtResource("19_2m0kl")

[node name="DropdownPopup" parent="." index="1"]
unfocusable = true
